# ntmg

./: .gitignore  meson.build
imgui/: imgui.h
include/: map.hh  tile.hh
include/gui/: guitilewindow.hh  guiworkspace.hh  mainwindow.hh
include/io/: asset.hh  assetmanager.hh
include/ui/: twindow.hh
include/workspace/: map.hh  tile.hh
src/: main.cc  map.cc  tile.cc
src/gui/: guitilewindow.cc  guiworkspace.cc  imgui_impl_glfw_gl3.cc  imgui_impl_sdl_gl3.cc  mainwindow.cc
src/ui/: twindow.cc
src/workspace/: map.cc  tile.cc
